# tneoeo2-budget-management

./: .gitmessage  README.md  pyproject.toml
auths/: models.py  serializers.py  urls.py  views.py
auths/migrations/: 0001_initial.py  0002_user_groups_user_is_active_user_is_superuser_and_more.py
budgets/: models.py  serializers.py  tests.py  urls.py  views.py
budgets/migrations/: 0001_initial.py
config/: asgi.py  root_urls.py  settings.py  wsgi.py
expenditures/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
expenditures/migrations/: 0001_initial.py  0002_alter_expenditure_is_except.py
